# sinusoidal-embedding

./: README.md  pyproject.toml
sinusoidal_embedding/: peak_embedding.py
sinusoidal_embedding/data/: spectrum_collater.py  spectrum_dataset.py  spectrum_transform.py
