[tool.poetry]
name = "sinusoidal-embedding"
version = "0.1.0"
description = ""
authors = ["Gennady Voronov <gennady.voronov@envedabio.com>"]
license = "GNU GPL v2.0"
readme = "README.md"
packages = [{include = "sinusoidal_embedding"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
matchms = "^0.20.0"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
